--- a/app/views/menus/main.html.erb
+++ b/app/views/menus/main.html.erb
@@ -87,42 +87,20 @@
         <% if [1,2].include? current_user.perfil_id %>
           <li><a href="<%= consulta_asistencia_alumno_path %>">Consultar asistencias del alumno</a></li>
         <% end %>
-      <% end %>
-
-
-      <% if [1,2,3,4].include? current_user.perfil_id %>
-        <li data-role="list-divider" data-icon="false" data-mini="true">
-          Actividades del colegio
-        </li>
-
-        <% if [1,3].include? current_user.perfil_id %>
-          <li><a href="<%= actividades_path %>">Registrar</a></li>
-        <% end %>
-
-        <% if [1,2].include? current_user.perfil_id %>
-          <li><a href="<%= autorizaciones_path(:accion => :autorizar, :usuario => current_user.usuario) %>" >Autorizar</a></li>          
-        <% end %>
-
-        <% if [1,3].include? current_user.perfil_id %>
-          <li><a href="<%= autorizaciones_path(:accion => :consultar) %>" >Consultar autorizaciones</a></li>
-        <% end %>
-
-        <% if [1,2,4].include? current_user.perfil_id %>
-          <li><a href="<%= calendario_actividades_path(Date.current.year, Date.current.month, Date.current.strftime('%d')) %>">Calendario</a></li>
-        <% end %>
-      <% end %>
-
-          
-      <% if current_user.perfil_id == 1 %>
-        <li data-role="list-divider" data-icon="false" data-mini="true">
-          Seguridad del sistema
-        </li>
-        <li><a href="<%= permisos_path %>">Permisos</a></li>
-        <li><a href="<%= perfiles_path %>">Perfiles</a></li>
-        <li><a href="<%= usuarios_path %>">Usuarios</a></li>
-        <li><a href="<%= crearusuarios_path %>">Creacion masiva de usuarios</a></li>
-      <% end %>
         
+        <% if [1,3].include? current_user.perfil_id %>
+          <li><a href="<%= tardanzas_path %>">Registrar tardanzas</a></li>
+        <% end %>
+        
+        <% if [1,3].include? current_user.perfil_id %>
+          <li><a href="<%= inasistencias_path %>">Registrar inasistencias</a></li>
+        <% end %>  
+        
+        <% if [1,3].include? current_user.perfil_id %>
+          <li><a href="<%= consultar_inasistencias_tardanzas_path %>">Consultar inasistencias y tardanzas</a></li>
+        <% end %>
+      <% end %>
+          
       
       <% if [1,2,3,4,5].include? current_user.perfil_id %>
         <li data-role="list-divider" data-icon="false" data-mini="true">
@@ -141,7 +119,17 @@
         </li>
         <li><a href="<%= cambiar_clave_path(:id => current_user.id) %>">Cambiar clave</a></li>
       <% end %>
-        
+      
+      <% if current_user.perfil_id == 1 %>
+        <li data-role="list-divider" data-icon="false" data-mini="true">
+          Seguridad del sistema
+        </li>
+        <li><a href="<%= permisos_path %>">Permisos</a></li>
+        <li><a href="<%= perfiles_path %>">Perfiles</a></li>
+        <li><a href="<%= usuarios_path %>">Usuarios</a></li>
+        <li><a href="<%= crearusuarios_path %>">Creacion masiva de usuarios</a></li>
+      <% end %>
+      
       <% if [1,5].include? current_user.perfil_id %> 
         <li data-role="list-divider" data-icon="false" data-mini="true">
           Administracion Colegio
@@ -156,17 +144,6 @@
         <li><a href="<%= anios_alumnos_path(:seccion_id => 0) %>">Asignar alumnos a secciones</a></li>
       <% end %>
       
-      <% if current_user.perfil_id == 1 %>
-        <li data-role="list-divider" data-icon="false" data-mini="true">
-          Seguridad del sistema
-        </li>
-        <li><a href="<%= permisos_path %>">Permisos</a></li>
-        <li><a href="<%= perfiles_path %>">Perfiles</a></li>
-        <li><a href="<%= usuarios_path %>">Usuarios</a></li>
-        <li><a href="<%= crearusuarios_path %>">Crear masivamente usuarios y notificarlos por correo</a></li>
-      <% end %>
-        
-        
       <% if current_user.perfil_id == 1 %> 
         <li data-role="list-divider" data-icon="false" data-mini="true">
           Administracion MiCole
