--- a/app/views/colegios/_form.html.erb
+++ b/app/views/colegios/_form.html.erb
@@ -43,7 +43,18 @@
   </div>
   <div class="field">
     Notificar inasistencia<br />
-    <%= collection_select(:colegio, :notificar_inasistencia, ListaValor.where("tabla=10").order("item"), :item, :descripcion, {:prompt => ':: Seleccione ::'}, {"data-mini" => "true", :required => "required"}) %>
+    <!--%= collection_select(:colegio, :notificar_inasistencia, ListaValor.where("tabla=10").order("item"), :item, :descripcion, {:prompt => ':: Seleccione ::'}, {"data-mini" => "true", :required => "required"}) %-->
+    <select <%= f.number_field :notificar_inasistencia, "data-role" => "slider", "data-mini" => "true" %> >
+                <option value = 0 <% if @colegio.notificar_inasistencia == 0 %> selected <%end%> >No</option>
+                <option value = 1 <% if @colegio.notificar_inasistencia == 1 %> selected <%end%> >Si</option>
+    </select>
+  </div>
+  <div class="field">
+    Notificar tardanza<br />
+    <select <%= f.number_field :notificar_tardanza, "data-role" => "slider", "data-mini" => "true" %> >
+                <option value = 0 <% if @colegio.notificar_tardanza == 0 %> selected <%end%> >No</option>
+                <option value = 1 <% if @colegio.notificar_tardanza == 1 %> selected <%end%> >Si</option>
+    </select>
   </div>
   <div class="field">
     Crear usuarios para alumnos a partir del grado (*)<br />
