--- a/app/views/autorizacion_mailer/notificacion_autorizacion.html.erb
+++ b/app/views/autorizacion_mailer/notificacion_autorizacion.html.erb
@@ -11,7 +11,7 @@
   sistema MiCole a la opción Autorizaciones dentro del menú Actividades. 
 </p>
 <p>
-  Tiene plazo hasta el <%= @actividad.limite_autorizacion.strftime('%d/%m/%Y %H:%M') %> para responder a la solicitud de autorización.
+  Tiene plazo hasta el <%= @actividad.limite_autorizacion.strftime('%d/%m/%Y') %> para responder a la solicitud de autorización.
 </p>
 <p>
   Para cualquier consulta adicional, por favor, comuníquese con el profesor o con personal administrativo del colegio.
