--- a/app/views/autorizacion_mailer/notificacion_autorizacion.text.erb
+++ b/app/views/autorizacion_mailer/notificacion_autorizacion.text.erb
@@ -10,7 +10,7 @@ en la que participará la sección de su hijo(a) <%= @alumno.apellidos_nombres %
 Esta actividad requiere su autorización para que su hijo(a) participe. Para autorizar la actividad debe ingresar al
 sistema MiCole a la opción Autorizaciones dentro del menú Actividades. 
 
-Tiene plazo hasta el <%= @actividad.limite_autorizacion.strftime('%d/%m/%Y %H:%M') %> para responder a la solicitud de autorización.
+Tiene plazo hasta el <%= @actividad.limite_autorizacion.strftime('%d/%m/%Y') %> para responder a la solicitud de autorización.
 
 Para cualquier consulta adicional, por favor, comuníquese con el profesor o con personal administrativo del colegio.
 
